<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/versionName"
        android:layout_width="269dp"
        android:layout_height="0dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="33dp"
        android:text="@string/about_text"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="24dp"
        android:text="@string/version"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/versionName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="354dp"
        android:onClick="back"
        android:text="@string/end_back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versionName" />

</androidx.constraintlayout.widget.ConstraintLayout>