<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".TrainingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="inputFile"
        android:text="@string/file"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="23dp"
        android:text="@string/start_button"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/progressBar_false"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_right" />

    <ProgressBar
        android:id="@+id/progressBar_all"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="141dp"
        android:indeterminateOnly="false"
        android:max="100"
        android:progress="60"
        android:progressDrawable="@drawable/circle"
        android:rotation="0"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:progress="60" />

    <ProgressBar
        android:id="@+id/progressBar_false"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="70dp"
        android:layout_height="69dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="51dp"
        android:indeterminateOnly="false"
        android:max="100"
        android:progress="60"
        android:progressDrawable="@drawable/circle"
        android:rotation="0"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar_right"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:progress="60" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="157dp"
        android:text="@string/end_all"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="3dp"
        android:text="@string/end_false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_all" />

    <ProgressBar
        android:id="@+id/progressBar_right"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="169dp"
        android:indeterminateOnly="false"
        android:max="100"
        android:progress="60"
        android:progressDrawable="@drawable/circle"
        android:rotation="0"
        app:layout_constraintEnd_toStartOf="@+id/progressBar_false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:progress="60" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="179dp"
        android:text="@string/end_true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_right"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
